# autoimprove

./: .gitignore  README.md  pyproject.toml
src/autoimprove/: __init__.py  analyzer.py  cli.py  config.py  evaluator.py  initializer.py  llm.py  prompts.py  runner.py
tests/: test_analyzer.py  test_cli.py  test_config.py  test_evaluator.py  test_initializer.py  test_llm.py  test_prompts.py  test_runner.py
